# decentralised

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  configure-windows.py  create-vs-solution.bat  dc-config.h.in
data/: configuration.xml  en.xml  ru.xml
data/Skins/Firestorm/: arial-10.xml  arial-bold-14.xml  skin.xml
data/assets/: Skeleton.Male.b3d  Skeleton.Male.dae
lang/: pt.xml  ru.xml  setup-lang.xml
libs/Debug/: decentralised-console.exp  decentralised.exp
libs/Release/: decentralised-console.exp  decentralised.exp
src/decentralised/: CMakeLists.txt  decentralised.rc  decentralised_app.cpp  decentralised_app.h  main.cpp
src/decentralised-console/: CMakeLists.txt
src/decentralised-console/src/: main.cpp
src/decentralised-core/: CMakeLists.txt
src/decentralised-core/include/: decentralised_core.hpp
src/decentralised-core/include/core/: address.hpp  avatar_file.hpp  block.hpp  constants.hpp  decentralised_client.hpp  error.hpp  format.hpp  poller.hpp  primitives.hpp  satoshi_serialize.hpp  script.hpp  session.hpp  stealth.hpp  threadpool.hpp  transaction.hpp  transaction_pool.hpp  types.hpp  validate.hpp  version.hpp
src/decentralised-core/include/core/blockchain/: blockchain.hpp  leveldb_blockchain.hpp  organizer.hpp
src/decentralised-core/include/core/blockchain/database/: stealth_database.hpp
src/decentralised-core/include/core/impl/: format.ipp
src/decentralised-core/include/core/impl/serialize/: block.ipp  misc.ipp
src/decentralised-core/include/core/impl/utility/: serializer.ipp
src/decentralised-core/include/core/network/: channel.hpp  handshake.hpp  hosts.hpp  network.hpp  p2p_network.hpp  protocol.hpp  shared_const_buffer.hpp
src/decentralised-core/include/core/utility/: assert.hpp  async_parallel.hpp  base58.hpp  big_number.hpp  checksum.hpp  elliptic_curve_key.hpp  hash.hpp  logger.hpp  mmfile.hpp  serializer.hpp  subscriber.hpp
src/decentralised-core/src/: address.cpp  avatar_file.cpp  block.cpp  constants.cpp  decentralised_client.cpp  error.cpp  format.cpp  poller.cpp  satoshi_serialize.cpp  script.cpp  session.cpp  stealth.cpp  threadpool.cpp  transaction.cpp  transaction_pool.cpp  validate.cpp
src/decentralised-core/src/blockchain/: blockchain.cpp  organizer.cpp
src/decentralised-core/src/blockchain/database/: stealth_database.cpp
src/decentralised-core/src/blockchain/leveldb/: leveldb_blockchain.cpp  leveldb_chain_keeper.cpp  leveldb_chain_keeper.hpp  leveldb_common.cpp  leveldb_common.hpp  leveldb_organizer.cpp  leveldb_organizer.hpp  leveldb_validate_block.cpp  leveldb_validate_block.hpp
src/decentralised-core/src/network/: channel.cpp  handshake.cpp  hosts.cpp  network.cpp  p2p_network.cpp  protocol.cpp
src/decentralised-core/src/utility/: base58.cpp  big_number.cpp  checksum.cpp  elliptic_curve_key.cpp  hash.cpp  logger.cpp  mmfile.cpp
src/decentralised-setup/: CMakeLists.txt  decentralised-setup.rc  resource.h  setup-background.xpm
src/decentralised-setup/include/: dc_setup.h  dc_setup_app.h  dc_setup_exitmodal.h  dc_setup_frame.h  lang.h
src/decentralised-setup/src/: dc_setup.cpp  dc_setup_app.cpp  dc_setup_exitmodal.cpp  dc_setup_frame.cpp  lang.cpp
src/decentralised/context/: context_application.h  context_dialogs.h  context_gui.h
src/decentralised/dialogs/: dialog_about.cpp  dialog_about.h  dialog_cam.cpp  dialog_cam.h  dialog_createavatar.cpp  dialog_createavatar.h
src/decentralised/event_handlers/: irrlicht_event_handler.cpp  irrlicht_event_handler.h
src/decentralised/managers/: manager_core.cpp  manager_core.h  manager_filesystem.cpp  manager_filesystem.h  manager_gui.cpp  manager_gui.h  manager_network.cpp  manager_network.h  manager_world.cpp  manager_world.h
src/decentralised/src/: main.cpp
src/decentralised/world/: world_atmosphere.cpp  world_atmosphere.h  world_avatar.cpp  world_avatar.h  world_terrain.cpp  world_terrain.h
src/decentralised_core/: CMakeLists.txt
src/decentralised_core/src/: decentralised_client.cpp  decentralised_client.h
src/irrlicht-extensions/: CMakeLists.txt
src/irrlicht-extensions/include/: IGUIConsoleOverlay.h  IGUIConsoleRow.h  IGUIDecentralisedCamControl.h  IGUIDecentralisedDialog.h  IGUIDecentralisedWindow.h
src/irrlicht-extensions/source/: CGUIConsoleOverlay.cpp  CGUIConsoleOverlay.h  CGUIConsoleRow.cpp  CGUIConsoleRow.h  CGUIDecentralisedButton.cpp  CGUIDecentralisedButton.h  CGUIDecentralisedCamControl.cpp  CGUIDecentralisedCamControl.h  CGUIDecentralisedDialog.cpp  CGUIDecentralisedDialog.h  CGUIDecentralisedDropdown.cpp  CGUIDecentralisedMenuBar.cpp  CGUIDecentralisedMenuBar.h  CGUIDecentralisedSkin.cpp  CGUIDecentralisedSkin.h  CGUIDecentralisedToolBar.cpp  CGUIDecentralisedToolBar.h  CGUIDecentralisedWindow.cpp
src/irrlichtextensions/: CMakeLists.txt
src/irrlichtextensions/include/: IGUIGraphicWindow.h
src/irrlichtextensions/source/: CGUIConsoleOverlay.h  CGUIDecentralisedButton.cpp  CGUIDecentralisedButton.h  CGUIDecentralisedContextMenu.cpp  CGUIDecentralisedContextMenu.h  CGUIDecentralisedDropdown.cpp  CGUIDecentralisedDropdown.h  CGUIDecentralisedMenuBar.h  CGUIDecentralisedSkin.cpp  CGUIDecentralisedSkin.h  CGUIDecentralisedTextbox.cpp  CGUIDecentralisedTextbox.h  CGUIDecentralisedWindow.cpp  CGUIDecentralisedWindow.h  CGUIGraphicWindow.cpp  CGUIGraphicWindow.h
