CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( irrlichtextensions )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/../lib" )

SET( IRRLICHT_SRC_DIR "${CMAKE_SOURCE_DIR}/dependencies/irrlicht/source/irrlicht" )
SET( IRRLICHT_INC_DIR "${CMAKE_SOURCE_DIR}/dependencies/irrlicht/include" )

SET( IRRLICHTEXT_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source" )
SET( IRRLICHTEXT_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" )

INCLUDE_DIRECTORIES( "${IRRLICHTEXT_SRC_DIR}" ${IRRLICHT_SRC_DIR} ${IRRLICHT_INC_DIR} ${IRRLICHTEXT_INC_DIR})

FILE( GLOB IRRLICHTEXT_SRC_FILES "${IRRLICHTEXT_SRC_DIR}/*.cpp" "${IRRLICHTEXT_SRC_DIR}/*.h" )
FILE( GLOB IRRLICHTEXT_INC_FILES "${IRRLICHTEXT_INC_DIR}/*.h" )

message(STATUS ${IRRLICHTEXT_INC_FILES})
SOURCE_GROUP( Source FILES ${IRRLICHTEXT_SRC_FILES} )
SOURCE_GROUP( Include FILES ${IRRLICHTEXT_INC_FILES} )

# SET( IRRLICHTEXT_LIB_FILES "" )

ADD_LIBRARY( irrlichtextensions STATIC ${IRRLICHTEXT_SRC_FILES} ${IRRLICHTEXT_LIB_FILES} ${IRRLICHTEXT_INC_FILES} )

SET_TARGET_PROPERTIES( irrlichtextensions PROPERTIES LIBRARY_OUTPUT_NAME irrlichtextensions ARCHIVE_OUTPUT_NAME irrlichtextensions )

if ( MSVC )
    set_target_properties( irrlichtextensions PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../libs)
    set_target_properties( irrlichtextensions PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../../../libs)
    set_target_properties( irrlichtextensions PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/../../../libs)
endif ( MSVC )